--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-page</title>
+    <title>lcdc</title>
   </head>
   <body>
     <div id="app"></div>
